# serverless-functions

./: README.md  pyproject.toml
api/: adj_synonyms.py
