[tool.poetry]
name = "serverless-functions"
version = "0.1.0"
description = ""
authors = ["KimrAndrew <andrewrk1997@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
